// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TasksTablePage rendering render with Breadcrubs and edit permissions 1`] = `
<div
  className="tasks-table-wrapper"
>
  <TaskModal
    isModalOpen={false}
    parentTaskID={null}
    setIsModalOpen={[Function]}
    url="/foreman_tasks/tasks?action=\\"some-name\\""
  />
  <TaskModal
    isModalOpen={false}
    parentTaskID={null}
    setIsModalOpen={[Function]}
    url="/foreman_tasks/tasks?action=\\"some-name\\""
  />
  <BulkTaskModal
    isModalOpen={false}
    parentTaskID={null}
    setIsModalOpen={[Function]}
    uriQuery={
      Object {
        "state": "stopped",
      }
    }
    url="/foreman_tasks/tasks?action=\\"some-name\\""
  />
  <BulkTaskModal
    isModalOpen={false}
    parentTaskID={null}
    setIsModalOpen={[Function]}
    uriQuery={
      Object {
        "state": "stopped",
      }
    }
    url="/foreman_tasks/tasks?action=\\"some-name\\""
  />
  <TaskModal
    isModalOpen={false}
    parentTaskID={null}
    setIsModalOpen={[Function]}
    url="/foreman_tasks/tasks?action=\\"some-name\\""
  />
  <BulkTaskModal
    isModalOpen={false}
    parentTaskID={null}
    setIsModalOpen={[Function]}
    uriQuery={
      Object {
        "state": "stopped",
      }
    }
    url="/foreman_tasks/tasks?action=\\"some-name\\""
  />
  <PageLayout
    beforeToolbarComponent={
      <Memo(Connect(TasksDashboard))
        history={
          Object {
            "location": Object {
              "pathname": "/foreman_tasks/tasks",
              "search": "?action=\\"some-name\\"",
            },
          }
        }
        parentTaskID={null}
      />
    }
    breadcrumbOptions={
      Object {
        "breadcrumbItems": Array [
          Object {
            "caption": "Tasks",
            "url": "/foreman_tasks/tasks",
          },
          Object {
            "caption": "action Name",
            "url": "/foreman_tasks/tasks/someid",
          },
          Object {
            "caption": "Sub tasks",
          },
        ],
      }
    }
    header="Tasks"
    onSearch={[Function]}
    searchProps={
      Object {
        "autocomplete": Object {
          "id": "searchBar",
          "searchQuery": "",
          "url": "tasks/auto_complete_search",
          "useKeyShortcuts": true,
        },
        "bookmarks": Object {
          "canCreateBookmarks": true,
          "documentationUrl": "4.1.5Searching",
          "url": "/api/bookmarks",
        },
        "controller": "foreman_tasks_tasks",
      }
    }
    searchQuery="a=b"
    searchable={true}
    toolbarButtons={
      <React.Fragment>
        <ToolbarItem>
          <Button
            icon={<RedoIcon />}
            onClick={[Function]}
            ouiaId="tasks-table-refresh-data"
            variant="primary"
          >
            Refresh Data
          </Button>
        </ToolbarItem>
        <ToolbarItem>
          <Spinner
            size="lg"
          />
        </ToolbarItem>
        <ToolbarItem>
          <Button
            component="a"
            href="/foreman_tasks/tasks.csv?search=%28state%3Dstopped%29"
            ouiaId="tasks-table-export-all"
            variant="secondary"
          >
            Export All
          </Button>
        </ToolbarItem>
        <ToolbarItem>
          <ActionSelectButton
            disabled={true}
            onCancel={[Function]}
            onForceCancel={[Function]}
            onResume={[Function]}
          />
        </ToolbarItem>
      </React.Fragment>
    }
  >
    <TasksTable
      actionName=""
      allRowsSelected={false}
      error={null}
      getTableItems={[MockFunction]}
      history={
        Object {
          "location": Object {
            "pathname": "/foreman_tasks/tasks",
            "search": "?action=\\"some-name\\"",
          },
        }
      }
      itemCount={2}
      openClickedModal={[MockFunction]}
      openModal={[Function]}
      parentTaskID={null}
      perPage={10}
      permissions={
        Object {
          "edit": false,
        }
      }
      reloadPage={[MockFunction]}
      results={
        Array [
          Object {
            "action": "a",
            "canEdit": true,
          },
        ]
      }
      selectPage={[MockFunction]}
      selectRow={[MockFunction]}
      selectedRows={Array []}
      sort={
        Object {
          "by": "q",
          "order": "w",
        }
      }
      status="PENDING"
      unselectAllRows={[MockFunction]}
      unselectRow={[MockFunction]}
    />
  </PageLayout>
</div>
`;

exports[`TasksTablePage rendering render with minimal props 1`] = `
<div
  className="tasks-table-wrapper"
>
  <TaskModal
    isModalOpen={false}
    parentTaskID={null}
    setIsModalOpen={[Function]}
    url="/foreman_tasks/tasks?action=\\"some-name\\""
  />
  <TaskModal
    isModalOpen={false}
    parentTaskID={null}
    setIsModalOpen={[Function]}
    url="/foreman_tasks/tasks?action=\\"some-name\\""
  />
  <BulkTaskModal
    isModalOpen={false}
    parentTaskID={null}
    setIsModalOpen={[Function]}
    uriQuery={
      Object {
        "state": "stopped",
      }
    }
    url="/foreman_tasks/tasks?action=\\"some-name\\""
  />
  <BulkTaskModal
    isModalOpen={false}
    parentTaskID={null}
    setIsModalOpen={[Function]}
    uriQuery={
      Object {
        "state": "stopped",
      }
    }
    url="/foreman_tasks/tasks?action=\\"some-name\\""
  />
  <TaskModal
    isModalOpen={false}
    parentTaskID={null}
    setIsModalOpen={[Function]}
    url="/foreman_tasks/tasks?action=\\"some-name\\""
  />
  <BulkTaskModal
    isModalOpen={false}
    parentTaskID={null}
    setIsModalOpen={[Function]}
    uriQuery={
      Object {
        "state": "stopped",
      }
    }
    url="/foreman_tasks/tasks?action=\\"some-name\\""
  />
  <PageLayout
    beforeToolbarComponent={
      <Memo(Connect(TasksDashboard))
        history={
          Object {
            "location": Object {
              "pathname": "/foreman_tasks/tasks",
              "search": "?action=\\"some-name\\"",
            },
          }
        }
        parentTaskID={null}
      />
    }
    header="Tasks"
    onSearch={[Function]}
    searchProps={
      Object {
        "autocomplete": Object {
          "id": "searchBar",
          "searchQuery": "",
          "url": "tasks/auto_complete_search",
          "useKeyShortcuts": true,
        },
        "bookmarks": Object {
          "canCreateBookmarks": true,
          "documentationUrl": "4.1.5Searching",
          "url": "/api/bookmarks",
        },
        "controller": "foreman_tasks_tasks",
      }
    }
    searchQuery="a=b"
    searchable={true}
    toolbarButtons={
      <React.Fragment>
        <ToolbarItem>
          <Button
            icon={<RedoIcon />}
            onClick={[Function]}
            ouiaId="tasks-table-refresh-data"
            variant="primary"
          >
            Refresh Data
          </Button>
        </ToolbarItem>
        <ToolbarItem>
          <Spinner
            size="lg"
          />
        </ToolbarItem>
        <ToolbarItem>
          <Button
            component="a"
            href="/foreman_tasks/tasks.csv?search=%28state%3Dstopped%29"
            ouiaId="tasks-table-export-all"
            variant="secondary"
          >
            Export All
          </Button>
        </ToolbarItem>
        <ToolbarItem>
          <ActionSelectButton
            disabled={true}
            onCancel={[Function]}
            onForceCancel={[Function]}
            onResume={[Function]}
          />
        </ToolbarItem>
      </React.Fragment>
    }
  >
    <TasksTable
      actionName=""
      allRowsSelected={false}
      error={null}
      getTableItems={[MockFunction]}
      history={
        Object {
          "location": Object {
            "pathname": "/foreman_tasks/tasks",
            "search": "?action=\\"some-name\\"",
          },
        }
      }
      itemCount={2}
      openClickedModal={[MockFunction]}
      openModal={[Function]}
      parentTaskID={null}
      perPage={10}
      permissions={
        Object {
          "edit": false,
        }
      }
      reloadPage={[MockFunction]}
      results={
        Array [
          "a",
          "b",
        ]
      }
      selectPage={[MockFunction]}
      selectRow={[MockFunction]}
      selectedRows={Array []}
      sort={
        Object {
          "by": "q",
          "order": "w",
        }
      }
      status="PENDING"
      unselectAllRows={[MockFunction]}
      unselectRow={[MockFunction]}
    />
  </PageLayout>
</div>
`;
